--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
 </head>
 
 <body>
-    <div class="align">
-        <center>
-            <h1>Delicious Eats</h1>
-        </center>
-        <center>
-            <ul>
+    <header id="main header">
+
+        <h1 class="title">Delicious Eats</h1>
+
+        <div class="align">
+            <ul class="div-list">
                 <li><a href="#Menu">Menu</a></li>
                 <li><a href="#Featured Dishes">Featured Dishes</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
-        </center>
-    </div>
+
+        </div>
+    </header>
+
     <h2 style="color: brown;">Our Menu</h2>
     <div class="align">
 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcrdBwnBB9V7Q4eQ9z-PuV6W5oxGOWH07VnA&s" alt="">
-        <center>
-            <h4>Grilled Chicken saled</h4>
-            <p>A healthy choice with a mix of fresh greens and grilled chicken</p>
-        </center>
+
+        <h4>Grilled Chicken saled</h4>
+        <p>A healthy choice with a mix of fresh greens and grilled chicken</p>
+
     </div>
     <div class="align">
         <img class="align"
             src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNQDcoLZwXAafN16_aGlY-S9g7QTYMrVTcmA&s" alt="">
-        <center>
-            <h4>Spaghetti Carbonara</h4>
-            <p>Classic Italian pasta with a creamy sauce and pancetta</p>
-        </center>
+
+        <h4>Spaghetti Carbonara</h4>
+        <p>Classic Italian pasta with a creamy sauce and pancetta</p>
+
     </div>
 
     <h2 style="color: brown;">Featured Dishes</h2>
@@ -45,27 +47,27 @@
 
         <img src="https://i.pinimg.com/236x/ab/63/d4/ab63d4588f75f72ad5910c0729d7675a.jpg" alt="">
 
-        <center>
-            <h4>Chef's Special steak</h4>
-            <p>perfectly cooked steak with seasonal vegetable.</p>
-        </center>
+
+        <h4>Chef's Special steak</h4>
+        <p>perfectly cooked steak with seasonal vegetable.</p>
+
     </div>
     <div class="align">
 
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTS6NaI_kLrtSbnbriTXRhIPeMgO5kzM5pY7g&s" alt="">
-        <center>
-            <h3>Seafood Platter</h3>
-            <p>A selection of the finest seafood for a fresh taste of the ocean</p>
-        </center>
+
+        <h3>Seafood Platter</h3>
+        <p>A selection of the finest seafood for a fresh taste of the ocean</p>
+
 
     </div>
     <div class="center">
-    <h1>Contact Us</h1>
-    <form>
-        Name:<input type="text" required />
-        Email: <input type="text" required />
-        <input type="submit" value"submit">
-    </form>
+        <h1>Contact Us</h1>
+        <form>
+            Name:<input type="text" required />
+            Email: <input type="text" required />
+            <input type="submit" value"submit">
+        </form>
     </div>
     <p>&copy;2024 Delicious Eats.All Rights Reserved.</p>
 
